Make sure dropdown menu texts also provide enough contrast
Close #38

--- a/less/components/header.less
+++ b/less/components/header.less
@@ -135,32 +135,31 @@
 }
 
 
-// menu dropdown
-.nav-item.show .nav-link.dropdown-toggle {
-	background-color: #000;
-	color: @primary-colour;
+// Dropdown menu
+.dropdown-menu {
+	padding: 0;
+	border-radius: 0;
+	border-color: #000;
 }
 
 .dropdown-item {
+	padding: 0.5rem 0.25rem;
+	text-align: center;
 	font-family: @font-family-secondary;
-	padding: .75rem 1.5rem;
+	font-size: 0.75rem;
 
 	&:focus, &:hover, &:active {
 		background-color: @primary-colour;
-		color: #000;
+		color: @contrast-colour;
 	}
-
 }
 
-#navigationUser .dropdown-item {
-	font-size: 14px;
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+	background-color: #000;
 }
 
-.nav-tabs .dropdown-menu {
-	border-radius: 0;
-}
-
-// styling journal logo
+// Journal logo
 .upper-header {
 	padding-top: 7px;
 	padding-left: 16px;
